--- a/projects.html
+++ b/projects.html
@@ -228,7 +228,7 @@
                                     <!-- Add more tools as needed -->
                                 </div>
                                 <img class="img-fluid mb-4 mb-md-0" src="img/microservices.jpg" alt="Image">
-                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                                <a href="https://github.com/Adexxy/microservices-demo" class="btn btn-primary view-details-link">View Details</a>
                             </div>                           
                         </div>
                         <!-- Add more project cards for Terraform Projects -->
@@ -262,7 +262,7 @@
                                     <!-- Add more tools as needed -->
                                 </div>
                                 <img class="img-fluid mb-4 mb-md-0" src="img/kubespray.jpg" alt="Image">
-                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                                <a href="https://github.com/Adexxy/kubespray" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -285,7 +285,7 @@
                                     <!-- Add more tools as needed -->
                                 </div>
                                 <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
-                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                                <a href="https://github.com/Adexxy" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -307,7 +307,7 @@
                                     <!-- Add more tools as needed -->
                                 </div>
                                 <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
-                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                                <a href="https://github.com/Adexxy/" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
 
