updated corrected cd image

--- a/projects.html
+++ b/projects.html
@@ -193,7 +193,7 @@
                                     <div class="tool-box">Docker</div>
                                     <!-- Add more tools as needed -->
                                 </div>
-                                <img class="img-fluid mb-4 mb-md-0" src="img/CD.jpg" alt="Image">
+                                <img class="img-fluid mb-4 mb-md-0" src="img/cd_222.jpg" alt="Image">
                                 <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
                             </div>   
                         </div>
