--- a/projects.html
+++ b/projects.html
@@ -177,7 +177,7 @@
                         <div id="commerce-app-2" class="col-md-12">
                             <div class="project-card">
                                 <h3>Commerce-App (Continuous Develpment)</h3>
-                                <p>This is a simple commerce-app project, aimed at showcasing a CD process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
+                                <p>This is a simple commerce-app project, aimed at showcasing a CD process. The project involves the use of kubernetes controller (ArgoCD) to fetch kubernetes manifest from GitHub and deploying on a kubernetes cluster. </p>
                                 <h4 class="tools-heading">Key Achivements</h4>
                                 <ul>
                                     <li>Automated and efficient deployment of the commerce application.</li>
