--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     alt="Image">
                 <h1 class="font-weight-bold">Owoade O. Taiwo</h1>
                 <p class="mb-4">
-                    With over two decades of IT experience and a strong foundation in Infrastructure and Cloud technologies, I focus on leveraging technology for business transformation. My achievements include significant cost savings through cutting-edge cloud solutions, expertise in cloud services, automation, and software delivery, and relevant certifications. I excel in orchestrating Kubernetes setups and establishing Jenkins pipelines, prioritize monitoring for optimal performance, and am passionate about leading teams towards innovation in DevOps. Let's connect to explore how I can contribute to your organization's success.                </p>
+                    With over two decades of experience and more than 15 years in IT and related fields, I have established a strong foundation in Infrastructure and Cloud technologies, focusing on leveraging technology for business transformation. I have a track record of achieving significant cost savings through cutting-edge cloud solutions and expertise in cloud services, automation, and software delivery, backed by relevant certifications. Proficient in container orchestration technologies, CI/CD pipelines, security, and monitoring, I am passionate about leading teams toward innovation in DevOps. Let's connect to explore how I can contribute to your organization's success.
+                </p>
                 <div class="d-flex justify-content-center mb-5">
                     <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
                     <a class="btn btn-outline-primary mr-2" href="https://github.com/Adexxy"><i class="fab fa-github"></i> GitHub</a>
