--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
                     alt="Image">
                 <h1 class="font-weight-bold">Owoade O. Taiwo</h1>
                 <p class="mb-4">
-                    I am a seasoned professional with over 17 years of overall experience and a dedicated focus on DevOps for the past 5 years. My career has evolved through various roles, providing me with a solid foundation in cloud infrastructure, automation, project management, and more. My expertise includes optimizing costs, improving efficiency, and driving transformative changes. Always eager to learn and adapt to new technologies and methodologies.
+                    With over two decades of experience and more than 15 years in IT and related fields, I have established a strong foundation in Infrastructure and Cloud technologies, focusing on leveraging technology for business transformation. I have a track record of achieving significant cost savings through cutting-edge cloud solutions and expertise in cloud services, automation, and software delivery, backed by relevant certifications. Proficient in container orchestration technologies, CI/CD pipelines, security, and monitoring, I am passionate about leading teams toward innovation in DevOps. Let's connect to explore how I can contribute to your organization's success.
                 </p>
                 <div class="d-flex justify-content-center mb-5">
                     <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
