--- a/projects.html
+++ b/projects.html
@@ -219,12 +219,10 @@
                                 <!-- Tools used -->
                                 <h4 class="tools-heading">Tools Used</h4>
                                 <div class="tool-boxes">
-                                    <div class="tool-box">Node.js</div>
-                                    <div class="tool-box">React</div>
                                     <div class="tool-box">GitHub</div>
                                     <div class="tool-box">Jenkins</div>
                                     <div class="tool-box">Docker</div>
-                                    <div class="tool-box">Nexus</div>
+                                    <div class="tool-box">ArgoCD</div>
                                     <!-- Add more tools as needed -->
                                 </div>
                                 <img class="img-fluid mb-4 mb-md-0" src="img/microservices.jpg" alt="Image">
@@ -281,10 +279,13 @@
                                     <div class="tool-box">Prometheus</div>
                                     <div class="tool-box">Grafana</div>
                                     <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">Helm</div>
                                     <div class="tool-box">Docker</div>
                                     <!-- Add more tools as needed -->
                                 </div>
-                                <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
+                                <img class="img-fluid mb-4 mb-md-0" src="img/prometheus1.png" alt="Image">
+                                <img class="img-fluid mb-4 mb-md-0" src="img/prometheus2.png" alt="Image">
+                                <img class="img-fluid mb-4 mb-md-0" src="img/prometheus3.png" alt="Image">
                                 <a href="https://github.com/Adexxy" class="btn btn-primary view-details-link">View Details</a>
                             </div>
                         </div>
