--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
                     alt="Image">
                 <h1 class="font-weight-bold">Owoade O. Taiwo</h1>
                 <p class="mb-4">
-                    With over two decades of experience and more than 15 years in IT and related fields, I have established a strong foundation in Infrastructure and Cloud technologies, focusing on leveraging technology for business transformation. I have a track record of achieving significant cost savings through cutting-edge cloud solutions and expertise in cloud services, automation, and software delivery, backed by relevant certifications. Proficient in container orchestration technologies, CI/CD pipelines, security, and monitoring, I am passionate about leading teams toward innovation in DevOps. Let's connect to explore how I can contribute to your organization's success.
+                    DevOps / Cloud engineer with over 6 years of specialized experience in cloud infrastructure, automation, and DevOps practices
+— supported by a 20-year career in technology, including expertise in physical data center management and design. Proficient in
+driving transformative cloud solutions across AWS and on-premise environments, I excel in leading teams to enhance efficiency
+and accelerate software delivery. Adept at version control (Git/GitHub), CI/CD pipeline management (Jenkins/GitLab), container
+orchestration (Docker Swarm, Kubernetes), Infrastructure as Code (Terraform), and infrastructure management (Ansible). I also
+possess strong skills in logging and monitoring (ELK Stack, Prometheus, Grafana) as well as Python scripting with unit testing, all
+aimed at leveraging cloud technologies for sustainable business success and digital transformation.
                 </p>
                 <div class="d-flex justify-content-center mb-5">
                     <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
