--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                 <h1 class="font-weight-bold">Owoade O. Taiwo</h1>
                 <p class="mb-4">
                     DevOps / Cloud engineer with over 6 years of specialized experience in cloud infrastructure, automation, and DevOps practices
-— supported by a 20-year career in technology, including expertise in physical data center management and design. Proficient in
-driving transformative cloud solutions across AWS and on-premise environments, I excel in leading teams to enhance efficiency
-and accelerate software delivery. Adept at version control (Git/GitHub), CI/CD pipeline management (Jenkins/GitLab), container
-orchestration (Docker Swarm, Kubernetes), Infrastructure as Code (Terraform), and infrastructure management (Ansible). I also
-possess strong skills in logging and monitoring (ELK Stack, Prometheus, Grafana) as well as Python scripting with unit testing, all
-aimed at leveraging cloud technologies for sustainable business success and digital transformation.
+                    — supported by a 20-year career in technology, including expertise in physical data center management and design. Proficient in
+                    driving transformative cloud solutions across AWS and on-premise environments, I excel in leading teams to enhance efficiency
+                    and accelerate software delivery. Adept at version control (Git/GitHub), CI/CD pipeline management (Jenkins/GitLab), container
+                    orchestration (Docker Swarm, Kubernetes), Infrastructure as Code (Terraform), and infrastructure management (Ansible). I also
+                    possess strong skills in logging and monitoring (ELK Stack, Prometheus, Grafana) as well as Python scripting with unit testing, all
+                    aimed at leveraging cloud technologies for sustainable business success and digital transformation.
                 </p>
                 <div class="d-flex justify-content-center mb-5">
                     <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
@@ -69,7 +69,7 @@ aimed at leveraging cloud technologies for sustainable business success and digi
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                     <a href="" class="navbar-brand d-block d-lg-none">Navigation</a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" title="Toggle navigation" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
@@ -204,7 +204,7 @@ aimed at leveraging cloud technologies for sustainable business success and digi
     </div>
 
     <!-- Back to Top -->
-    <a href="#" class="back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a href="#" class="back-to-top" title="Back to top"><i class="fa fa-angle-double-up"></i></a>
 </body>
 
 </html>
