--- a/index.html
+++ b/index.html
@@ -124,4 +124,48 @@
                         </div>
                         <div class="col-md-7">
                             <h3>Microservices Deployment</h3>
-                            <p>Containerized
+                            <p>Containerized, scalable applications deployed with Kubernetes and Docker Compose.</p>
+                            <ul>
+                                <li><a href="projects.html#microservice-1">Microservices Demo App</a></li>
+                            </ul>
+                            <a href="projects.html" class="btn-view-all">View All Projects <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Infrastructure Section -->
+                <section id="infrastructure" class="project-category mb-5">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img src="img/blog-1.jpg" class="img-fluid project-image" alt="Infrastructure Image">
+                        </div>
+                        <div class="col-md-7">
+                            <h3>Infrastructure Orchestration & Management</h3>
+                            <p>Projects showcasing use of Infrastructure as Code tools like Terraform and Ansible for cloud and bare-metal provisioning.</p>
+                            <ul>
+                                <li><a href="projects.html#sre-1">Kubernetes Cluster with Kubespray</a></li>
+                                <li><a href="projects.html#sre-2">Application Performance Monitoring</a></li>
+                                <li><a href="projects.html#sre-3">Incident Management Automation</a></li>
+                            </ul>
+                            <a href="projects.html" class="btn-view-all">View All Projects <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+            <!-- Scripts -->
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+            <script src="lib/easing/easing.min.js"></script>
+            <script src="lib/waypoints/waypoints.min.js"></script>
+            <script src="mail/jqBootstrapValidation.min.js"></script>
+            <script src="mail/contact.js"></script>
+            <script src="js/main.js"></script>
+        </div>
+    </div>
+
+    <!-- Back to Top -->
+    <a href="#" class="back-to-top" title="Back to top"><i class="fa fa-angle-double-up"></i></a>
+</body>
+
+</html>
