--- a/projects.html
+++ b/projects.html
@@ -110,6 +110,178 @@
         <div id="project-container" class="container">
             <h1 class="mb-4">All Projects</h1>
 
+            <!-- CICD Projects -->
+                <div id="CICD-projects" class="project-category">
+                    <h2>Continuous Integration/Continuous Deployment (CI/CD) Projects</h2>
+                    <div class="row">
+                        <!-- Project cards for Terraform Projects -->
+                        <div id="commerce-app-1" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Commerce-App (Continuous Integration)</h3>
+                                <p>This is a simple commerce-app project, aimed at showcasing a CI process. The project involves building the app and publishing the artifacts to DockerHub and Nexus.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Automated CI pipeline ensuring code quality and reliability.</li>
+                                    <li>Seamless integration with Docker for containerization.</li>
+                                    <li>Efficient storage and versioning of artifacts in Nexus.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Node.js</div>
+                                    <div class="tool-box">React</div>
+                                    <div class="tool-box">GitHub</div>
+                                    <div class="tool-box">Jenkins</div>
+                                    <div class="tool-box">Docker</div>
+                                    <div class="tool-box">Nexus</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/arch-design-3.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                            </div>                            
+                        </div>
+                        <div id="commerce-app-2" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Commerce-App (Continuous Develpment)</h3>
+                                <p>This is a simple commerce-app project, aimed at showcasing a CD process. The project involves the use of kubernetes controller (ArgoCD) to fetch kubernetes manifest from GitHub and deploying on a kubernetes cluster. </p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Automated and efficient deployment of the commerce application.</li>
+                                    <li>Utilization of GitOps principles for CD with ArgoCD.</li>
+                                    <li>Effective container orchestration and scaling with Kubernetes.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">GitHub</div>
+                                    <div class="tool-box">ArgoCD</div>
+                                    <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">Docker</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/cd_222.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Details</a>
+                            </div>   
+                        </div>
+                        <!-- Add more project cards for Terraform Projects -->
+                    </div>
+                </div>
+
+                <!-- Microservices Projects -->
+                <div id="CICD-projects" class="project-category">
+                    <h2>Deployment of Microservices</h2>
+                    <div class="row">
+                        <!-- Project cards for Microservices Projects -->
+                        <div id="microservice-1" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Google Microservices</h3>
+                                <p>This project is a google demo microservices included in my portfolio to showcase the deployment of microservices-based application. The architecture is designed with modularity, scalability, and flexibility in mind.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Automated CI pipeline ensuring code quality and reliability.</li>
+                                    <li>Seamless integration with Docker for containerization.</li>
+                                    <li>Efficient storage and versioning of artifacts in Nexus.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">GitHub</div>
+                                    <div class="tool-box">Jenkins</div>
+                                    <div class="tool-box">Docker</div>
+                                    <div class="tool-box">ArgoCD</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/microservices.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/microservices-demo" class="btn btn-primary view-details-link">View Details</a>
+                            </div>                           
+                        </div>
+                        <!-- Add more project cards for Terraform Projects -->
+                    </div>
+                </div>
+
+                <!-- NodeJS Projects -->
+                <div id="terraform-projects" class="project-category">
+                    <h2>Infrastructure Orchestration and Management</h2>
+                    <div class="row">
+                        <!-- Project cards for Terraform Projects -->
+                        <div id="sre-1" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Bare Metal Kubernetes Cluster Deployment with Kubespray</h3>
+                                <p>This project focuses on setting up and managing Kubernetes clusters on bare metal servers, enabling efficient orchestration of applications and services. Kubespray repository was cloned on Github and used for this project.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Ability to deploy Kubernetes clusters on bare metal servers.</li>
+                                    <li>Automation of deployment and scaling processes using Ansible </li>
+                                    <li>Streamlined management and monitoring of applications in the bare metal Kubernetes environment.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Vagrant</div>
+                                    <div class="tool-box">Terraform</div>
+                                    <div class="tool-box">Ansible</div>
+                                    <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">Kubespray</div>
+                                    <div class="tool-box">Bare Metal Server</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/kubespray.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/kubespray" class="btn btn-primary view-details-link">View Details</a>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div id="sre-2" class="project-card">
+                                <h3>Application Performance Monitoring (APM) Implementation</h3>
+                                <p>This project involves the implementation of Application Performance Monitoring (APM) tools to monitor the performance and health of critical applications, ensuring optimal user experience.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Real-time monitoring and visualization of application performance.</li>
+                                    <li>Proactive identification and resolution of performance issues.</li>
+                                    <li>Enhanced application reliability and improved user experience.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Prometheus</div>
+                                    <div class="tool-box">Grafana</div>
+                                    <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">Helm</div>
+                                    <div class="tool-box">Docker</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/prometheus1.png" alt="Image">
+                                <img class="img-fluid mb-4 mb-md-0" src="img/prometheus2.png" alt="Image">
+                                <img class="img-fluid mb-4 mb-md-0" src="img/prometheus3.png" alt="Image">
+                                <a href="https://github.com/Adexxy" class="btn btn-primary view-details-link">View Details</a>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div id="sre-3" class="project-card">
+                                <h3>Incident Management and Escalation Automation</h3>
+                                <p>This project focuses on automating incident management and escalation processes, ensuring rapid incident response and minimal downtime for critical systems.</p>
+                                <h4 class="tools-heading">Key Achivements</h4>
+                                <ul>
+                                    <li>Automated incident detection and categorization based on severity and impact.</li>
+                                    <li>Immediate and appropriate escalations to the respective on-call personnel.</li>
+                                    <li>Reduction in incident resolution time and improved service availability.</li>
+                                </ul>
+                                <!-- Tools used -->
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">Slack</div>
+                                    <div class="tool-box">Grafana</div>
+                                    <div class="tool-box">Prometheus</div>
+                                    <!-- Add more tools as needed -->
+                                </div>
+                                <img class="img-fluid mb-4 mb-md-0" src="img/blog-3.jpg" alt="Image">
+                                <a href="https://github.com/Adexxy/" class="btn btn-primary view-details-link">View Details</a>
+                            </div>
+                        </div>
+
+                        <!-- Add more project cards for Terraform Projects -->
+                    </div>
+                </div>
+
             <!-- Add updated content for all project categories -->
             <!-- This includes CI/CD, Microservices Deployment, and Infrastructure Management -->
             <!-- Ensure the language is concise, professional, and technically aligned with your portfolio goals -->
