--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
                 <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
                 <h1 class="font-weight-bold">Owoade O. Taiwo</h1>
                 <p class="mb-4">
-                    DevOps / Cloud Engineer with 6+ years of specialized experience delivering automated, scalable, and secure cloud infrastructure. With a foundation of over 20 years in tech, I bring deep hands-on knowledge in Kubernetes, CI/CD, Terraform, Ansible, Docker, Python, and cloud-native tools across AWS and hybrid environments.
+                    DevOps / Cloud engineer with 6+ years of experience in cloud infrastructure, automation, and DevOps, backed by a 20-year career in IT. Expert in CI/CD pipelines, container orchestration (Docker, Kubernetes), Terraform, Ansible, logging/monitoring, and Python scripting.
                 </p>
                 <div class="d-flex justify-content-center mb-5">
                     <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
