--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                 <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Owoade Taiwo">
                 <h1 class="font-weight-bold">Owoade O. Taiwo</h1>
-                <p class="mb-4">DevOps / Cloud engineer with 6+ years of experience in cloud automation, AWS, Kubernetes, CI/CD pipelines, and 20+ years in tech.</p>
+                <p class="mb-4">DevOps / Cloud engineer with 6+ years of experience in cloud infrastructure, automation, and DevOps, backed by a 20-year career in IT. Expert in CI/CD pipelines, container orchestration (Docker, Kubernetes), Terraform, Ansible, logging/monitoring, and Python scripting.</p>
                 <div class="d-flex justify-content-center mb-4">
                     <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-primary" href="https://github.com/Adexxy"><i class="fab fa-github"></i></a>
