--- a/projects.html
+++ b/projects.html
@@ -5,68 +5,53 @@
 <head>
     <meta charset="utf-8">
     <title>My DevOps Portfolio</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="DevOps Portfolio by Owoade Taiwo" name="description">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="DevOps portfolio showcasing infrastructure, automation, CI/CD, and cloud deployment projects.">
+    
+    <link href="img/favicon.ico" rel="icon">
 
-```
-<!-- Favicon -->
-<link href="img/favicon.ico" rel="icon">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:300;400;600;700;800&display=swap" rel="stylesheet">
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:300;400;600;700;800&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
-<!-- Font Awesome -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="css/style.css" rel="stylesheet">
 
-<!-- Bootstrap Stylesheet -->
-<link href="css/style.css" rel="stylesheet">
+    <style>
+        .project-category h3 {
+            font-size: 1.5rem;
+            background: #f8f9fa;
+            padding: 10px;
+            border-left: 4px solid #007bff;
+            margin-bottom: 15px;
+        }
 
-<style>
-    .project-card {
-        border: 1px solid #ccc;
-        padding: 20px;
-        margin: 10px;
-        max-width: 300px;
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+        .project-category ul {
+            padding-left: 20px;
+        }
 
-    .project-card h3 {
-        margin-bottom: 10px;
-    }
+        .project-category ul li a {
+            color: #007bff;
+            text-decoration: none;
+        }
 
-    .project-card img {
-        max-width: 100%;
-        margin-top: 12px;
-    }
+        .project-category ul li a:hover {
+            text-decoration: underline;
+        }
 
-    .tool-boxes {
-        display: flex;
-        flex-wrap: wrap;
-    }
+        .btn-view-all {
+            font-weight: bold;
+            color: #007bff;
+        }
 
-    .tool-box {
-        margin: 5px;
-        padding: 10px;
-        background-color: #f0f0f0;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
-
-    .tools-heading {
-        font-size: 14px;
-        text-decoration: underline;
-    }
-
-    .view-details-link {
-        align-self: flex-end;
-        margin-top: 10px;
-    }
-</style>
-```
-
+        .project-image {
+            max-height: 250px;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 
 <body>
