--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                     <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
                     <a class="btn btn-outline-primary mr-2" href="https://github.com/Adexxy"><i class="fab fa-github"></i> GitHub</a>
                 </div>
-                <a href="mailto:adexxy@live.com" class="btn btn-lg btn-block btn-primary mt-auto">Hire Me</a>
+                <a href="mailto:adexxy@live.com" class="btn btn-lg btn-block btn-primary mt-auto">📩 Hire Me</a>
             </div>
             <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
                 <i class="fas fa-2x fa-angle-double-right text-primary"></i>
