--- a/resume.html
+++ b/resume.html
@@ -46,8 +46,8 @@
                 <h1 class="font-weight-bold">Owoade O. Taiwo</h1>
                 <p class="mb-4">DevOps / Cloud engineer with 6+ years of experience in cloud infrastructure, automation, and DevOps, backed by a 20-year career in IT. Expert in CI/CD pipelines, container orchestration (Docker, Kubernetes), Terraform, Ansible, logging/monitoring, and Python scripting.</p>
                 <div class="d-flex justify-content-center mb-4">
-                    <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary" href="https://github.com/Adexxy"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-outline-primary mr-2" href="https://linkedin.com/in/owoade-taiwo-5b34a943"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+                    <a class="btn btn-outline-primary" href="https://github.com/Adexxy"><i class="fab fa-github"></i> GitHub</a>
                 </div>
                 <a href="mailto:adexxy@live.com" class="btn btn-lg btn-block btn-primary mt-auto">📩 Hire Me</a>
             </div>
@@ -62,7 +62,7 @@
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                     <a href="index.html" class="navbar-brand d-block d-lg-none">Menu</a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" title="Toggle navigation" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
