--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <!-- Navbar Start -->
             <div class="container p-0">
                 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                    <a href="#" class="navbar-brand d-block d-lg-none">Menu</a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <a href="index.html" class="navbar-brand d-block d-lg-none">Menu</a>
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
