--- a/resume.html
+++ b/resume.html
@@ -88,7 +88,7 @@
             </div>
 
             <!-- Back to Top -->
-            <a href="#" class="back-to-top"><i class="fa fa-angle-double-up"></i></a>
+            <a href="#" class="back-to-top" title="Back to top"><i class="fa fa-angle-double-up"></i></a>
         </div>
     </div>
 
