all projects page

--- a/projects.html
+++ b/projects.html
@@ -107,8 +107,8 @@
             </nav>
         </div>
 
-        <div id="project-container" class="container">
-            <h1 class="mb-4">All Projects</h1>
+        <div id="project-container" class="container py-5">
+            <h1 class="mb-4 text-primary">All Projects</h1>
 
             <!-- CICD Projects -->
             <div id="CICD-projects" class="project-category">
