centre justification for projects page heading

--- a/projects.html
+++ b/projects.html
@@ -109,6 +109,7 @@
 
         <div id="project-container" class="container py-5">
             <h1 class="mb-4 text-primary">All Projects</h1>
+            <div class="row justify-content-center"></div>
 
             <!-- CICD Projects -->
             <div id="CICD-projects" class="project-category">
