centre justification for projects page heading

--- a/projects.html
+++ b/projects.html
@@ -107,9 +107,11 @@
             </nav>
         </div>
 
-        <div id="project-container" class="container py-5">
-            <h1 class="mb-4 text-primary">All Projects</h1>
-            <div class="row justify-content-center"></div>
+        <div class="container py-5">
+            <h1 class="text-center mb-4">🚀 All Projects</h1>
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <div class="project-card-large">
 
             <!-- CICD Projects -->
             <div id="CICD-projects" class="project-category">
