centre justification for projects page heading

--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,13 @@
             align-self: flex-end;
             margin-top: 10px;
         }
+
+        .project-card-large {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+        }
     </style>
 
 
