--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,7 @@
         </div>
 
         <div class="container py-5">
-            <h1 class="text-center mb-4">🚀 All Projects</h1>
+            <h1 class="text-center mb-4">All Projects</h1>
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <div class="project-card-large">
@@ -124,7 +124,7 @@
             <div id="CICD-projects" class="project-category">
                 <h2>Continuous Integration/Continuous Deployment (CI/CD) Projects</h2>
                 <div class="row">
-                    <div id="commerce-app-1" class="col-md-12">
+                    <div id="commerce-app-1" class="col-md-20">
                         <div class="project-card">
                             <h3>CI for Commerce App – Jenkins, Docker & Nexus</h3>
                             <p>Automated CI pipeline for a Node.js + React-based commerce application. Code is built, containerized, tested, and published to both DockerHub and Nexus.</p>
