--- a/projects.html
+++ b/projects.html
@@ -123,9 +123,10 @@
             <!-- CICD Projects -->
             <div id="CICD-projects" class="project-category">
                 <h2>Continuous Integration/Continuous Deployment (CI/CD) Projects</h2>
+                
                 <div class="row">
-                    <div id="commerce-app-1" class="col-md-5">
-                        <div class="project-card">
+                    <div id="commerce-app-1" class="col-md-6">
+                        <div class="project-box">
                             <h3>CI for Commerce App – Jenkins, Docker & Nexus</h3>
                             <p>Automated CI pipeline for a Node.js + React-based commerce application. Code is built, containerized, tested, and published to both DockerHub and Nexus.</p>
                             <h4 class="tools-heading">Key Achievements</h4>
