centre justification for projects page heading

--- a/projects.html
+++ b/projects.html
@@ -125,8 +125,8 @@
                 <h2>Continuous Integration/Continuous Deployment (CI/CD) Projects</h2>
                 
                 <div class="row">
-                    <div id="commerce-app-1" class="col-md-6">
-                        <div class="project-box">
+                    <div id="commerce-app-1" class="col-md-12">
+                        <div class="project-card">
                             <h3>CI for Commerce App – Jenkins, Docker & Nexus</h3>
                             <p>Automated CI pipeline for a Node.js + React-based commerce application. Code is built, containerized, tested, and published to both DockerHub and Nexus.</p>
                             <h4 class="tools-heading">Key Achievements</h4>
