finished flask ms ci

--- a/index.html
+++ b/index.html
@@ -98,24 +98,6 @@
             <div class="container py-5">
                 <h1 class="mb-4 text-primary">Welcome to My DevOps/Cloud Portfolio</h1>
 
-                <!-- CI/CD Section -->
-                <section id="cicd" class="project-category mb-5">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <img src="img/blog-3.jpg" class="img-fluid project-image" alt="CI/CD Image">
-                        </div>
-                        <div class="col-md-7">
-                            <h3>Continuous Integration / Continuous Deployment (CI/CD)</h3>
-                            <p>Projects demonstrating automated build, test, and deployment pipelines using Jenkins, GitHub Actions, and GitLab CI.</p>
-                            <ul>
-                                <li><a href="projects.html#commerce-app-1">Commerce-App (CI)</a></li>
-                                <li><a href="projects.html#commerce-app-2">Commerce-App (CD)</a></li>
-                            </ul>
-                            <a href="projects.html" class="btn-view-all">View All Projects <i class="fa fa-angle-right"></i></a>
-                        </div>
-                    </div>
-                </section>
-
                 <!-- Microservices Section -->
                 <section id="microservices" class="project-category mb-5">
                     <div class="row">
@@ -126,7 +108,12 @@
                             <h3>Microservices Deployment</h3>
                             <p>Containerized, scalable applications deployed with Kubernetes and Docker Compose.</p>
                             <ul>
-                                <li><a href="projects.html#microservice-1">Microservices Demo App</a></li>
+                                <li>
+                                    <a href="projects.html#microservice-1">Demo Flask Microservices Continuous Integration</a>
+                                </li>
+                                <li>
+                                    <a href="projects.html#microservice-2">Microservices Demo App</a>
+                                </li>
                             </ul>
                             <a href="projects.html" class="btn-view-all">View All Projects <i class="fa fa-angle-right"></i></a>
                         </div>
