--- a/projects.html
+++ b/projects.html
@@ -121,6 +121,59 @@
                     <div class="col-lg-10">
                         <div class="project-card-large">
 
+                <!-- Microservices Projects -->
+                <div id="microservices-projects" class="project-category">
+                    <h2>Microservices Deployment</h2>
+                    <div class="row">
+                        <div id="microservice-1" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Flask Microservices Continuous Integration</h3>
+                                <p>A cloud-native microservices platform demonstrating advanced DevOps skills: CI with GitHub Actions, infrastructure provisioning with Terraform, container orchestration with Kubernetes (EKS), and deployment automation with Helm. This project showcases the deployment of a real-world microservices-based architecture using Kubernetes and GitOps. Components are modular, scalable, and independently deployable.</p>
+                                <h4 class="tools-heading">Key Achievements</h4>
+                                <ul>
+                                    <li>4-tier microservices app (User, Product, Order, Notification)</li>
+                                    <li>Infrastructure as Code: Terraform (AWS VPC, EKS, RDS)</li>
+                                    <li>CI: GitHub Actions</li>
+                                    <li>Containerization: Docker</li>
+                                    <li>Orchestration: Kubernetes, Helm</li>
+                                </ul>
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">GitHub Action</div>
+                                    <div class="tool-box">Terraform</div>
+                                    <div class="tool-box">Docker</div>
+                                    <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">AWS</div>
+                                </div>
+                                <img class="img-fluid mb-4" src="img/flowchart_2025-05-30 16-19-03.png" alt="Microservices Deployment">
+                                <a href="https://github.com/Adexxy/devops-microservices-platform" class="btn btn-primary view-details-link">View Project</a>
+                            </div>
+                        </div>
+                        <div id="microservice-2" class="col-md-12">
+                            <div class="project-card">
+                                <h3>Microservices Deployment – Google Demo App</h3>
+                                <p>This project showcases the deployment of a real-world microservices-based architecture using Kubernetes and GitOps. Components are modular, scalable, and independently deployable.</p>
+                                <h4 class="tools-heading">Key Achievements</h4>
+                                <ul>
+                                    <li>Deployed microservices using CI/CD pipelines and GitOps practices.</li>
+                                    <li>Service discovery, scaling, and resilience configured using Kubernetes.</li>
+                                    <li>Pipeline integration ensures version-controlled, repeatable deployments.</li>
+                                </ul>
+                                <h4 class="tools-heading">Tools Used</h4>
+                                <div class="tool-boxes">
+                                    <div class="tool-box">GitHub</div>
+                                    <div class="tool-box">Jenkins</div>
+                                    <div class="tool-box">Docker</div>
+                                    <div class="tool-box">Kubernetes</div>
+                                    <div class="tool-box">ArgoCD</div>
+                                </div>
+                                <img class="img-fluid mb-4" src="img/microservices.jpg" alt="Microservices Deployment">
+                                <a href="https://github.com/Adexxy/microservices-demo" class="btn btn-primary view-details-link">View Project</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>            
+
                 <!-- CICD Projects -->
                 <div id="CICD-projects" class="project-category">
                     <h2>Continuous Integration/Continuous Deployment (CI/CD) Projects</h2>
@@ -169,35 +222,6 @@
                                 </div>
                                 <img class="img-fluid mb-4" src="img/cd_222.jpg" alt="CD with ArgoCD">
                                 <a href="https://github.com/Adexxy/my-portfolio-project-2#readme" class="btn btn-primary view-details-link">View Project</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Microservices Projects -->
-                <div id="microservices-projects" class="project-category">
-                    <h2>Microservices Deployment</h2>
-                    <div class="row">
-                        <div id="microservice-1" class="col-md-12">
-                            <div class="project-card">
-                                <h3>Microservices Deployment – Google Demo App</h3>
-                                <p>This project showcases the deployment of a real-world microservices-based architecture using Kubernetes and GitOps. Components are modular, scalable, and independently deployable.</p>
-                                <h4 class="tools-heading">Key Achievements</h4>
-                                <ul>
-                                    <li>Deployed microservices using CI/CD pipelines and GitOps practices.</li>
-                                    <li>Service discovery, scaling, and resilience configured using Kubernetes.</li>
-                                    <li>Pipeline integration ensures version-controlled, repeatable deployments.</li>
-                                </ul>
-                                <h4 class="tools-heading">Tools Used</h4>
-                                <div class="tool-boxes">
-                                    <div class="tool-box">GitHub</div>
-                                    <div class="tool-box">Jenkins</div>
-                                    <div class="tool-box">Docker</div>
-                                    <div class="tool-box">Kubernetes</div>
-                                    <div class="tool-box">ArgoCD</div>
-                                </div>
-                                <img class="img-fluid mb-4" src="img/microservices.jpg" alt="Microservices Deployment">
-                                <a href="https://github.com/Adexxy/microservices-demo" class="btn btn-primary view-details-link">View Project</a>
                             </div>
                         </div>
                     </div>
